3 out of 5 complete

--- a/coding_assignment/HealthStatsPart1.ipynb
+++ b/coding_assignment/HealthStatsPart1.ipynb
@@ -33,30 +33,25 @@
     "\n",
     "The following table represents W2H ratios considered by three well-known organizations. \n",
     "    - DGSP\n",
+    "        -represents the first two columns of women and men data\n",
     "    - WHO\n",
+    "        -represents the second two columns of women and men data\n",
     "    - NIDDK\n",
+    "        -represents the third two columns of women and men data\n",
     "    \n",
-    "| <i></i>\n",
     "\n",
+    "| **DGSP** | **WHO** | **NIDDK** |\n",
+    "| ------- :| -----: | -----: |\n",
     "\n",
-    "| Women | Men | Women | Men | Women | Men |\n",
-    "| -----:| ---: | -----:| ---:| -----:| ---: |\n",
-    "| ?  | ?  | ?  | ?  | ?  | ?  |\n",
-    "| < 0.80| < 0.90 | ?  | ?  | ?  | ?  |\n",
-    "| 0.80-0.84 | 0.90-0.99 | ?  | ?  | ?  | ?  |\n",
-    "| >0.85 | >1.00 | >0.85  | >0.90  | >0.80  | >1.00  |   \n",
+    "| Women | Men | Women | Men | Women | Men |      |\n",
+    "| -----:| ---: | -----:| ---:| -----:| ---: | ---: |\n",
+    "| ?  | ?  | ?  | ?  | ?  | ?  |**under-weight**|\n",
+    "| < 0.80| < 0.90 | ?  | ?  | ?  | ?  |**normal weight**|\n",
+    "| 0.80-0.84 | 0.90-0.99 | ?  | ?  | ?  | ?  |**over-weight**|\n",
+    "| >0.85 | >1.00 | >0.85  | >0.90  | >0.80  | >1.00  |**obesity**| \n",
     "   \n",
     "   \n",
     "   \n",
-    "   \n",
-    "   **use table from wikipedia\n",
-    "    \n",
-    "    \n",
-    "markdown table\n",
-    "\n",
-    "| header1 | header2 |\n",
-    "| ------- | -------- |\n",
-    "| cell1 | cell2 |\n",
     "\n",
     "\n"
    ]
@@ -112,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -141,16 +136,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: 'M'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-42-dc512cfff559>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0;31m# Note: the values in the `raw_row` list are all strings.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;31m# Create a new list called `row` that converts each item in `raw_row` to the right data type\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m     \u001b[0mrow\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mraw_row\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mraw_row\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mraw_row\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mraw_row\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# FIX THIS;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m     \u001b[0;31m# you'll need to use conversion functions above\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;31m# Append the new `row` to the `rows` list\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'M'"
+     ]
+    }
+   ],
    "source": [
     "# Goal: Scrub and convert the data, loading it into a new list called rows\n",
     "\n",
     "# Strips out newline '\\n' characters and converts to a list\n",
-    "raw_rows = [r.rstrip('\\n').split(',') for r in raw_lines] # <--- Whoa. Why does this work? \n",
+    "raw_rows = [r.rstrip('\\n').split(',') for r in raw_lines] # <--- Whoa. Why does this work?\n",
+    "                                                        #rstrip removes characters on the right ie:'/n'\n",
+    "                                                        #split takes these strings and inputs them into a list\n",
     "\n",
     "# Creates a new list `rows`, starting with just the column names\n",
     "rows = list() \n",
@@ -161,10 +170,12 @@
     "    \n",
     "    # Note: the values in the `raw_row` list are all strings.\n",
     "    # Create a new list called `row` that converts each item in `raw_row` to the right data type  \n",
-    "    row = [int(raw_row[0]),raw_row[1],raw_row[2],raw_row[3]] # FIX THIS; \n",
+    "    row = (int(raw_row[0]),int(raw_row[1]),int(raw_row[2]),int(raw_row[3])) # FIX THIS; \n",
     "    # you'll need to use conversion functions above\n",
     "    # Append the new `row` to the `rows` list\n",
     "    rows.append(row)\n",
+    "\n",
+    "print(rows)\n",
     "    \n",
     "# from here on out use the `rows` list instead of `raw_rows` or `raw_lines`\n",
     "# You may want to print out `rows` to test whether your code above worked"
@@ -183,11 +194,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-50-420efdf677a6>, line 10)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-50-420efdf677a6>\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31m    if w2h_ratio < 0.90: # Based on the ratio and the gender, set the variable shape to either 'Apple' or 'Pear'\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# Goal: For each row of data calculate and store the w2h_ratio and shape.\n",
     "\n",
@@ -197,11 +217,11 @@
     "# For each row in the rows list, calculate the waist to hips ratio and shape\n",
     "for row in rows[1:]:\n",
     "    # Calculate the w2h_ratio \n",
-    "    w2h_ratio = 1 # FIX THIS; you will need to take care about data types\n",
-    "    \n",
-    "    # Based on the ratio and the gender, set the variable shape to either 'Apple' or 'Pear'\n",
-    "    \n",
-    "    shape = 'Pear' # FIX THIS; you will need to use a conditional\n",
+    "    w2h_ratio = (str(\"waist\") / str(\"hip\") # FIX THIS; you will need to take care about data types\n",
+    "    if w2h_ratio < 0.90: # Based on the ratio and the gender, set the variable shape to either 'Apple' or 'Pear'\n",
+    "        print(\"Pear\")\n",
+    "    else:\n",
+    "        print(\"Apple\") # FIX THIS; you will need to use a conditional\n",
     "    \n",
     "    # Add the new data to the end of the row\n",
     "    row += [w2h_ratio, shape] # note: += is shorthand for the extend method used above\n",
