--- a/Lecture04-PY4E-Chapter5.ipynb
+++ b/Lecture04-PY4E-Chapter5.ipynb
@@ -992,78 +992,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#ignore\n",
     "import random\n",
     "\n",
-    "#two random integers requested: all have range 1-6\n",
-    "#must create 10 sets of integers for 10 rounds \n",
+    "def print_n(x):\n",
+    "    print(x ,'->')\n",
+    "    for i in range(1,x+1): #create loop to go through all numbers up to random selected \n",
+    "        if x % i == 0:     #must create loop first before declaring random integer variable\n",
+    "            print (i)\n",
+    "            \n",
+    "x = random.randint(1,50) #select variable for random integer\n",
     "\n",
-    "def print_dice():\n",
-    "    A = random.randint(1,6) \n",
-    "    B = random.randint(1,6)\n",
-    "     \n",
-    "    for dice in print_dice():\n",
-    "        print[A,B]\n",
-    "    \n",
-    "    if A1 > B1:\n",
-    "        print('A')\n",
-    "        \n",
-    "    elif A1 < B1:\n",
-    "        print('B')\n",
-    "        \n",
-    "    else:\n",
-    "        print('tied')\n",
-    "\n",
-    "    print_dice(10)"
+    "print_n(x) #print only variable for random integer since loop created above"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
+   "execution_count": 43,
+   "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-10-5bb8a8571910>, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-5bb8a8571910>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    def print_dice(10):\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "5\n",
+      "1\n",
+      "2\n",
+      "5\n",
+      "6\n",
+      "2\n",
+      "3\n",
+      "3\n",
+      "6\n",
+      "5\n",
+      "3\n",
+      "6\n",
+      "5\n",
+      "2\n",
+      "3\n",
+      "1\n",
+      "5\n",
+      "2\n",
+      "1\n",
+      "tied\n",
+      "\n"
      ]
     }
    ],
    "source": [
+    "#ignore\n",
     "import random\n",
     "\n",
-    "#two random integers requested: all have range 1-6\n",
-    "#must create 10 sets of integers for 10 rounds \n",
+    "for x in range(1,10):\n",
+    "    print (random.randint(1,6))\n",
+    "for y in range(10) :\n",
+    "    print (random.randint(1,6))\n",
+    "    \n",
+    "roll = [x,y]\n",
+    "if x > y:\n",
+    "    print('A')       \n",
+    "elif x < y:\n",
+    "    print('B')        \n",
+    "else:\n",
+    "    print('tied')\n",
     "\n",
-    "def print_dice(10):\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "B\n",
+      "tied\n",
+      "B\n",
+      "A\n",
+      "B\n",
+      "tied\n",
+      "A\n",
+      "B\n",
+      "A\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#completed Q1\n",
+    "import random \n",
+    "\n",
+    "#create loop before calling random function and before if statement- call range one over desired number\n",
+    "for x in range (1,11):\n",
     "    A = random.randint(1,6)\n",
-    "    B = random.randint(1,6)\n",
-    "    return [A,B]\n",
-    "\n",
-    "n = 10\n",
-    " n < 10 :\n",
+    "    B = random.randint(1,6) \n",
+    "    \n",
     "    if A > B:\n",
-    "        \n",
     "        print('A')\n",
     "        \n",
     "    elif A < B:\n",
-    "        \n",
     "        print('B')\n",
     "        \n",
     "    else:\n",
-    "        \n",
     "        print('tied')\n",
-    "        \n",
-    "print_dice()"
+    "\n",
+    "print()"
    ]
   },
   {
@@ -1089,27 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import random\n",
-    "\n",
-    "# generate random integer list of random length\n",
-    "def lst_gen():\n",
-    "    int_lst = []\n",
-    "    i = random.randint(0,5) # complete code here to generate a value between 0 and 5\n",
-    "    # generates `i` random integers and store them in `int_lst`\n",
-    "    for x in range(i + 1):\n",
-    "        rand_int = random.randint(0,9) # complete code here to generate a value between 0 and 9\n",
-    "        int_lst.append(rand_int)\n",
-    "    \n",
-    "    return(int_lst)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 80,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1132,22 +1154,23 @@
     "\n",
     "# check if `int_lst` contains `j`\n",
     "def lst_check():\n",
-    "    j = # complete code here to generate a value between 0 and 9\n",
-    "    int_lst = lst_gen()\n",
+    "    j = random.randint(0,9) # complete code here to generate a value between 0 and 9\n",
+    "    list(set(j).intersection(int_lst))\n",
+    "    \n",
     "    # write code here to output `int_lst` and `j`\n",
     "    # complete code below to iterate through `int_lst`\n",
     "    # for \n",
     "        # check if `int_lst` contains `j` by comparing elements with j (`==`)\n",
     "        \n",
     "            # if found print `found!`\n",
-    "            print('found!')\n",
+    "    print('found!')\n",
     "    # otherwise print `not found!`\n",
     "    print('not found!')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 82,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1155,11 +1178,15 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7 [5, 5, 0, 4, 1]\n",
-      "not found\n"
+     "ename": "TypeError",
+     "evalue": "'int' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-82-a0c1d867383f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# test your function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mlst_check\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-80-84ad17be43c2>\u001b[0m in \u001b[0;36mlst_check\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mlst_check\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0mj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m9\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# complete code here to generate a value between 0 and 9\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m     \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mintersection\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint_lst\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;31m# write code here to output `int_lst` and `j`\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not iterable"
      ]
     }
    ],
@@ -1193,14 +1220,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sum: 357\n",
+      "mean: 35.7\n"
+     ]
+    }
+   ],
+   "source": [
+    "#completed Q3\n",
+    "import random\n",
+    "import math\n",
+    "\n",
+    "#print 10 random integers from 1 to 100\n",
+    "sum = 0\n",
+    "for i in range(10):\n",
+    "    x = random.randint(1,100)\n",
+    "    sum = sum + x #calculate sum in order to later calculate mean\n",
+    "print('sum'+ ':', sum)\n",
+    "\n",
+    "mean = 0\n",
+    "for i in range(10):\n",
+    "    x = random.randint(1,100)\n",
+    "    mean = sum / 10 #use sum calculated earlier to divide by number of integers \n",
+    "print('mean'+ ':', mean)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1221,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1231,15 +1284,16 @@
     {
      "data": {
       "text/plain": [
-       "[4, 8, 9, 9, 8, 1, 1, 3, 8, 7]"
+       "[7, 3, 7, 5, 6, 4, 1, 8, 2, 2]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#do not change\n",
     "import random\n",
     "def random_lst_gen(x = 10):\n",
     "    random_lst = []\n",
@@ -1253,16 +1307,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can't multiply sequence by non-int of type 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-79-564a3bbb6a07>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0mmy_hist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_lst\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-79-564a3bbb6a07>\u001b[0m in \u001b[0;36mmy_hist\u001b[0;34m(my_lst)\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m11\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmy_lst\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'-'\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: can't multiply sequence by non-int of type 'list'"
+     ]
+    }
+   ],
    "source": [
     "# write your function here \n",
     "def my_hist(my_lst):\n",
+    "    for x in range (1,11):\n",
+    "        x = my_lst\n",
+    "        print('-' * x)\n",
+    "  \n",
+    "   \n",
     "    # complete the code here\n",
     "    \n",
     "    \n",
@@ -1296,10 +1368,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "44 ->\n",
+      "1\n",
+      "2\n",
+      "4\n",
+      "11\n",
+      "22\n",
+      "44\n"
+     ]
+    }
+   ],
+   "source": [
+    "#completed Q5\n",
+    "import random\n",
+    "\n",
+    "def print_n(x):\n",
+    "    print(x ,'->')\n",
+    "    for i in range(1,x+1): #create loop to go through all numbers up to random selected \n",
+    "        if x % i == 0:     #must create loop first before declaring random integer variable\n",
+    "            print (i)\n",
+    "            \n",
+    "x = random.randint(1,50) #select variable for random integer\n",
+    "\n",
+    "print_n(x) #print only variable for random integer since loop created above"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(13, 88, 45)\n",
+      "--> out of range\n"
+     ]
+    }
+   ],
+   "source": [
+    "#ignore-used as sample for above answer\n",
+    "import random\n",
+    "\n",
+    "#three random integers requested: i, lower, upper- all have range of 1-100\n",
+    "def print_n():\n",
+    "    i = random.randint(1,100) \n",
+    "    lower = random.randint(1,100) \n",
+    "    upper = random.randint(1,100) \n",
+    "    print((i, lower, upper))  #print integers i, lower, upper in ().\n",
+    "    #create 'if statment to fullfill 'in range' or 'out of range'\n",
+    "    if i > lower and i < upper:\n",
+    "        print('--> in range')\n",
+    "    else:\n",
+    "        print('--> out of range')\n",
+    "        \n",
+    "print_n()"
+   ]
   },
   {
    "cell_type": "markdown",
