--- a/Lecture04-PY4E-Chapter5.ipynb
+++ b/Lecture04-PY4E-Chapter5.ipynb
@@ -1131,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 112,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1139,6 +1139,7 @@
    },
    "outputs": [],
    "source": [
+    "#completed Q2\n",
     "import random\n",
     "\n",
     "# generate random integer list of random length\n",
@@ -1155,22 +1156,28 @@
     "# check if `int_lst` contains `j`\n",
     "def lst_check():\n",
     "    j = random.randint(0,9) # complete code here to generate a value between 0 and 9\n",
-    "    list(set(j).intersection(int_lst))\n",
-    "    \n",
+    "    for j in range (0,9):\n",
+    "        for int_lst in range (0,9):\n",
+    "            print(j == int_lst, end = \" \")\n",
+    "            if j == int_lst:\n",
+    "                 print('found!')\n",
+    "            else:\n",
+    "                print('not found!')\n",
+    "                \n",
     "    # write code here to output `int_lst` and `j`\n",
     "    # complete code below to iterate through `int_lst`\n",
     "    # for \n",
     "        # check if `int_lst` contains `j` by comparing elements with j (`==`)\n",
     "        \n",
     "            # if found print `found!`\n",
-    "    print('found!')\n",
+    "        #print('found!')\n",
     "    # otherwise print `not found!`\n",
-    "    print('not found!')"
+    "        #print('not found!')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 113,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1178,15 +1185,90 @@
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'int' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-82-a0c1d867383f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# test your function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mlst_check\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-80-84ad17be43c2>\u001b[0m in \u001b[0;36mlst_check\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mlst_check\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0mj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m9\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# complete code here to generate a value between 0 and 9\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m     \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mintersection\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint_lst\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;31m# write code here to output `int_lst` and `j`\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not iterable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "True found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "True found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "True found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "True found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "True found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "True found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "True found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "False not found!\n",
+      "True found!\n"
      ]
     }
    ],
