--- a/coding_assignment/HealthStatsPart1.ipynb
+++ b/coding_assignment/HealthStatsPart1.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -126,6 +126,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_rows = [r.rstrip('\\n').split(',') for r in raw_lines]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['ID', 'Waist', 'Hip', 'Gender'], ['1', '30', '32', 'M'], ['2', '32', '37', 'M'], ['3', '30', '36', 'M'], ['4', '33', '39', 'M'], ['5', '29', '33', 'M'], ['6', '32', '38', 'M'], ['7', '33', '42', 'M'], ['8', '30', '40', 'M'], ['9', '30', '37', 'M'], ['10', '32', '39', 'M'], ['11', '24', '35', 'F'], ['12', '25', '37', 'F'], ['13', '24', '37', 'F'], ['14', '22', '34', 'F'], ['15', '26', '38', 'F'], ['16', '26', '37', 'F'], ['17', '25', '38', 'F'], ['18', '26', '37', 'F'], ['19', '28', '40', 'F'], ['20', '23', '35', 'F']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(raw_rows)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -136,20 +162,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: 'M'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-dc512cfff559>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0;31m# Note: the values in the `raw_row` list are all strings.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;31m# Create a new list called `row` that converts each item in `raw_row` to the right data type\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m     \u001b[0mrow\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mraw_row\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mraw_row\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mraw_row\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mraw_row\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# FIX THIS;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m     \u001b[0;31m# you'll need to use conversion functions above\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;31m# Append the new `row` to the `rows` list\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'M'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['ID', 'Waist', 'Hip', 'Gender'], [1, 30, 32, 'M'], [2, 32, 37, 'M'], [3, 30, 36, 'M'], [4, 33, 39, 'M'], [5, 29, 33, 'M'], [6, 32, 38, 'M'], [7, 33, 42, 'M'], [8, 30, 40, 'M'], [9, 30, 37, 'M'], [10, 32, 39, 'M'], [11, 24, 35, 'F'], [12, 25, 37, 'F'], [13, 24, 37, 'F'], [14, 22, 34, 'F'], [15, 26, 38, 'F'], [16, 26, 37, 'F'], [17, 25, 38, 'F'], [18, 26, 37, 'F'], [19, 28, 40, 'F'], [20, 23, 35, 'F']]\n"
      ]
     }
    ],
@@ -170,7 +192,7 @@
     "    \n",
     "    # Note: the values in the `raw_row` list are all strings.\n",
     "    # Create a new list called `row` that converts each item in `raw_row` to the right data type  \n",
-    "    row = (int(raw_row[0]),int(raw_row[1]),int(raw_row[2]),int(raw_row[3])) # FIX THIS; \n",
+    "    row = [int(raw_row[0]),int(raw_row[1]),int(raw_row[2]),raw_row[3]] # FIX THIS\n",
     "    # you'll need to use conversion functions above\n",
     "    # Append the new `row` to the `rows` list\n",
     "    rows.append(row)\n",
@@ -179,6 +201,25 @@
     "    \n",
     "# from here on out use the `rows` list instead of `raw_rows` or `raw_lines`\n",
     "# You may want to print out `rows` to test whether your code above worked"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#row = int(float(raw_row[0]),(float(raw_row[1]),(float(raw_row[2]),(float(raw_row[3]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#original code\n",
+    "#row = int(raw_row[0],int(raw_row[1]),int(raw_row[2]),int(raw_row[3]))"
    ]
   },
   {
@@ -194,20 +235,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-50-420efdf677a6>, line 10)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-50-420efdf677a6>\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31m    if w2h_ratio < 0.90: # Based on the ratio and the gender, set the variable shape to either 'Apple' or 'Pear'\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Goal: For each row of data calculate and store the w2h_ratio and shape.\n",
     "\n",
@@ -217,11 +249,11 @@
     "# For each row in the rows list, calculate the waist to hips ratio and shape\n",
     "for row in rows[1:]:\n",
     "    # Calculate the w2h_ratio \n",
-    "    w2h_ratio = (str(\"waist\") / str(\"hip\") # FIX THIS; you will need to take care about data types\n",
+    "    w2h_ratio = row[1] / row[2] # FIX THIS; you will need to take care about data types\n",
     "    if w2h_ratio < 0.90: # Based on the ratio and the gender, set the variable shape to either 'Apple' or 'Pear'\n",
-    "        print(\"Pear\")\n",
+    "        shape = 'Pear'\n",
     "    else:\n",
-    "        print(\"Apple\") # FIX THIS; you will need to use a conditional\n",
+    "        shape = 'Apple' # FIX THIS; you will need to use a conditional\n",
     "    \n",
     "    # Add the new data to the end of the row\n",
     "    row += [w2h_ratio, shape] # note: += is shorthand for the extend method used above\n",
@@ -275,15 +307,6 @@
     "from IPython.display import HTML, display\n",
     "display(HTML(html_table))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
