--- a/coding_assignment/HealthStatsPart1.ipynb
+++ b/coding_assignment/HealthStatsPart1.ipynb
@@ -192,7 +192,7 @@
     "    \n",
     "    # Note: the values in the `raw_row` list are all strings.\n",
     "    # Create a new list called `row` that converts each item in `raw_row` to the right data type  \n",
-    "    row = [int(raw_row[0]),int(raw_row[1]),int(raw_row[2]),raw_row[3]] # FIX THIS\n",
+    "    row = [int(raw_row[0]),int(raw_row[1]),int(raw_row[2]),raw_row[3]] # FIX THIS-fixed\n",
     "    # you'll need to use conversion functions above\n",
     "    # Append the new `row` to the `rows` list\n",
     "    rows.append(row)\n",
@@ -249,11 +249,11 @@
     "# For each row in the rows list, calculate the waist to hips ratio and shape\n",
     "for row in rows[1:]:\n",
     "    # Calculate the w2h_ratio \n",
-    "    w2h_ratio = row[1] / row[2] # FIX THIS; you will need to take care about data types\n",
+    "    w2h_ratio = row[1] / row[2] # FIX THIS-fixed; you will need to take care about data types\n",
     "    if w2h_ratio < 0.90: # Based on the ratio and the gender, set the variable shape to either 'Apple' or 'Pear'\n",
     "        shape = 'Pear'\n",
     "    else:\n",
-    "        shape = 'Apple' # FIX THIS; you will need to use a conditional\n",
+    "        shape = 'Apple' # FIX THIS-fixed; you will need to use a conditional\n",
     "    \n",
     "    # Add the new data to the end of the row\n",
     "    row += [w2h_ratio, shape] # note: += is shorthand for the extend method used above\n",
