--- a/Lecture04-PY4E-Chapter5.ipynb
+++ b/Lecture04-PY4E-Chapter5.ipynb
@@ -1181,7 +1181,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#cleaned up code\n",
+    "import random\n",
+    "\n",
+    "def lst_gen():\n",
+    "    int_lst = []\n",
+    "    i = random.randint(0,5) # complete code here to generate a value between 0 and 5\n",
+    "                            # generates `i` random integers and store them in `int_lst`\n",
+    "    for x in range(i + 1):\n",
+    "        rand_int = random.randint(0,9) # complete code here to generate a value between 0 and 9\n",
+    "        int_lst.append(rand_int)\n",
+    "    \n",
+    "    return(int_lst)\n",
+    "\n",
+    "def lst_check():\n",
+    "    j = random.randint(0,9) # complete code here to generate a value between 0 and 9\n",
+    "    int_lst = lst_gen() #must generate int_list before running\n",
+    "    print(int_lst, j)\n",
+    "    \n",
+    "    for i in int_lst: #do not generate a new list \n",
+    "        if i == j:\n",
+    "            return ('found!') #change print to return so that you will not print both for loop and below\n",
+    "            \n",
+    "    print('not found!')\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1192,10 +1224,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 9, 3] 9\n",
-      "found!\n",
-      "not found!\n"
+      "[9, 5, 6, 5, 5] 5\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'found!'"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
