added in gender-did not include in original code

--- a/coding_assignment/HealthStatsPart1.ipynb
+++ b/coding_assignment/HealthStatsPart1.ipynb
@@ -250,6 +250,7 @@
     "for row in rows[1:]:\n",
     "    # Calculate the w2h_ratio \n",
     "    w2h_ratio = row[1] / row[2] # FIX THIS-fixed; you will need to take care about data types\n",
+    "    if (row[3] == 'M' and w2h_ratio < 0.90) or (row[2] == 'F' and w2h_ratio > 0.90):\n",
     "    if w2h_ratio < 0.90: # Based on the ratio and the gender, set the variable shape to either 'Apple' or 'Pear'\n",
     "        shape = 'Pear'\n",
     "    else:\n",
